# transactional-outbox

./: .dockerignore  .gitignore  DEPLOYMENT.md  Makefile  docker-compose.prod.yml  docker-compose.yml  init.sql  package-lock.json  package.json  pgadmin_init.sh  pgadmin_servers.json  plan.txt  pyproject.toml  test.sh
.github/workflows/: deploy.yml  docker-build.yml
app/: Dockerfile  __init__.py  config.py  db.py  entrypoint.sh  enums.py  main.py  publisher.py  requirements-dev.txt  requirements.txt  schemas.py  worker.py  worker_standalone.py
app/api/: __init__.py  admin.py  health.py  orders.py
app/repositories/: orders.py  outbox.py
app/services/: orders.py
app/tests/: conftest.py  test_atomicity.py  test_happy_path.py  test_worker_retry.py
scripts/: generate_docs.py  open_pgadmin.py  outbox_kick.py  outbox_stats.py  seed_orders.py  stats.py
worker/: Dockerfile
